fix: fix entity id for payloads at store-metadata
